--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-cayman
-title: Welcome to Darius' homepage!
-date: 2021-01-27
+defaults:
+-
+  theme: jekyll-theme-cayman
+  title: Welcome to Darius' homepage!
